feat(caregiver-dashboard): implement contac tab

--- a/src/app/caregiver/tab-students/tab-students.component.html
+++ b/src/app/caregiver/tab-students/tab-students.component.html
@@ -85,7 +85,7 @@
       </ion-list>
     </ion-content>
     <ion-footer>
-      <ion-toolbar color="primary">
+      <ion-toolbar>
         <ion-button
          expand="block"
          [disabled]="!selectedStudent"
