--- a/src/app/caregiver/tab-contact/tab-contact.component.html
+++ b/src/app/caregiver/tab-contact/tab-contact.component.html
@@ -11,9 +11,24 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+<div class="container-center">
+    <ion-card class="school-card">
+      <ion-card-header>
+        <ion-card-subtitle>{{ cct }}</ion-card-subtitle>
+        <ion-card-title>{{ escuela }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p class="phone-number">{{ telefono }}</p>
+        <div class="button-wrapper">
+          <a href="tel:+523535320033" class="btn-call">
+            <ion-icon name="call"></ion-icon>
+          </a>
+        </div>
+        <p class="tap-instruction">Presiona para llamar</p>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
 
 <ion-action-sheet
@@ -25,11 +40,3 @@
 >
 </ion-action-sheet>
 
-<ion-toast
- cssClass="page__toast"
- [message]="toastMessage"
- [isOpen]="isToastOpen"
- [duration]="3000"
- (didDismiss)="isToastOpen = false"
->
-</ion-toast>
