--- a/src/app/teacher/tab-groups/tab-groups.component.html
+++ b/src/app/teacher/tab-groups/tab-groups.component.html
@@ -117,7 +117,7 @@
               </ion-list>
             </ion-content>
             <ion-footer>
-              <ion-toolbar color="primary">
+              <ion-toolbar>
                 <ion-button
                  expand="block"
                  [disabled]="!selectedStudent"
@@ -174,7 +174,7 @@
               </ion-list>
             </ion-content>
             <ion-footer>
-              <ion-toolbar color="primary">
+              <ion-toolbar>
                 <ion-button
                  expand="block"
                  [disabled]="!selectedStudent"
