fix(caregiver-dashboard): reset selectedStudent when add student modal closes

--- a/src/app/caregiver/tab-students/tab-students.component.html
+++ b/src/app/caregiver/tab-students/tab-students.component.html
@@ -45,6 +45,7 @@
  [initialBreakpoint]="1.0"
  [breakpoints]="[0, 1.0]"
  (willPresent)="loadStudentsWithoutTutor(cct)"
+ (didDismiss)="selectedStudent=null"
  #addStudentModal
 >
   <ng-template>
