chore: update Firebase configuration files

--- a/src/app/portal/portal.page.html
+++ b/src/app/portal/portal.page.html
@@ -1,12 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>
-    @if(isStandalone && !isLoading) {
-      Validación de escuela
-    } @else {
-      ESCUELA
-    }
-    </ion-title>
+    <ion-title>ESCUELA - v1.0</ion-title>
   </ion-toolbar>
 </ion-header>
 
